intro done(mobile)

--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
 </head>
 <body>
   <main>
-    <section class="first">
-      <nav>
-        <figure>
-          <img src="./images/logo.svg" alt="Blogr's Logo"/>
-        </figure>
-        <figure>
-          <img src="./images/icon-hamburger.svg" alt="Menu" />
-        </figure>
-      </nav>
-      <p>A modern publishing platform</p>
-      <p>Grow your audience and build your online brand</p>
-      <div>
-        <button>Start for Free</button>
-        <button>Learn More</button>
+    <section class="intro">
+      <div class="intro_bg">
+        <nav class="intro__nav">
+          <figure>
+            <img  class="intro__logo" src="./images/logo.svg" alt="Blogr's Logo"/>
+          </figure>
+          <figure>
+            <img class="intro__hamburger" src="./images/icon-hamburger.svg" alt="Menu" />
+          </figure>
+        </nav>
+        <p class="intro__title">A modern publishing platform</p>
+        <p class="intro__subtitle">Grow your audience and build your online brand</p>
+        <div class="intro__btn">
+          <button>Start for Free</button>
+          <button>Learn More</button>
+        </div>
       </div>
     </section>
     <section class="secondary">
