--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="intro__title">A modern publishing platform</p>
         <p class="intro__subtitle">Grow your audience and build your online brand</p>
         <div class="intro__btn">
-          <button>Start for Free</button>
+          <button class="intro__btn--first">Start for Free</button>
           <button>Learn More</button>
         </div>
       </div>
