Update in section intro and done section secondary(mobile)

--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
         </div>
       </div>
     </section>
-    <section class="secondary">
+    <section class="second">
       <h2>Designed for the future</h2>
-      <figure>
-        <img src="./images/illustration-editor-mobile.svg" alt=" illustration-editor-mobile">
-      </figure>
+      <img class="second__ilustration" src="./images/illustration-editor-mobile.svg" alt=" illustration-editor-mobile">
       <h2>Introducing an extensible editor</h2>
       <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
         The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
