--- a/index.html
+++ b/index.html
@@ -40,16 +40,18 @@
         by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
     </section>
     <section class="third">
-      <img src="./images/illustration-phones.svg" alt="illustration-phones">
-      <h1>State of the Art Infrastructure</h1>
-      <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+      <div class="third__ilustration">
+        <img class="third__mobiles" src="./images/illustration-phones.svg" alt="illustration-phones">
+      </div>
+      <div class="third__info">
+        <h1>State of the Art Infrastructure</h1>
+        <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
         This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-      </p>
+        </p>
+      </div>
     </section>
     <section class="fourth">
-      <figure>
-        <img src="./images/illustration-laptop-mobile.svg" alt="illustration-laptop-mobile">
-      </figure>
+        <img class="fourth__ilustration" src="./images/illustration-laptop-mobile.svg" alt="illustration-laptop-mobile">
       <h2>Free, open, simple</h2>
       <p>
         Blogr is a free and open source application backed by a large community of helpful developers. It supports
@@ -62,6 +64,7 @@
     </section>
   </main>
   <footer>
+    <img src="./images/logo.svg" alt="Blogr's logo">
     <p>Product
 
     Overview
