Done Mobile design(375px)

--- a/index.html
+++ b/index.html
@@ -51,40 +51,43 @@
       </div>
     </section>
     <section class="fourth">
+      <div>
         <img class="fourth__ilustration" src="./images/illustration-laptop-mobile.svg" alt="illustration-laptop-mobile">
-      <h2>Free, open, simple</h2>
-      <p>
+      </div>
+      <h2 class="fourth__title">Free, open, simple</h2>
+      <p class="fourth__paragraph">
         Blogr is a free and open source application backed by a large community of helpful developers. It supports
   features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
   and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
       </p>
-      <h2>Powerful tooling</h2>
-      <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+      <h2 class="fourth__title">Powerful tooling</h2>
+      <p class="fourth__paragraph">Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
         capable of producing even the most complicated sites.</p>
     </section>
   </main>
   <footer>
     <img src="./images/logo.svg" alt="Blogr's logo">
-    <p>Product
-
-    Overview
-    Pricing
-    Marketplace
-    Features
-    Integrations
-
-    Company
-
-    About
-    Team
-    Blog
-    Careers
-
-    Connect
-
-    Contact
-    Newsletter
-    LinkedIn</p>
+    <h4>Product</h4>
+    <ul>
+      <li><a href="">Overview</a></li>
+      <li><a href="">Pricing</a></li>
+      <li><a href="">Marketplace</a></li>
+      <li><a href="">Features</a></li>
+      <li><a href="">integrations</a></li>
+    </ul>
+    <h4>Company</h4>
+    <ul>
+      <li><a href="">About</a></li>
+      <li><a href="">Team</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Careers</a></li>
+    </ul>
+    <h4>Connect</h4>
+    <ul>
+      <li><a href="">Contact</a></li>
+      <li><a href="">Newsletter</a></li>
+      <li><a href="">LinkedIn</a></li>
+    </ul>
   </footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
